# rust-zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  configuration.yml  spec.yaml
.cargo/: config.toml
config/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
