[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Santiago Marulanda <santiagomm1997@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = { version = "4" }
chrono = {version = "0.4.22", default-features = false, features = ["clock"] }
config = { version = "0.14" }
once_cell = { version = "1" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = { version = "0.7" }
tracing-bunyan-formatter = { version = "0.3" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = { version = "4" }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = { version = "0.11" }